--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,4 +8,4 @@ COPY ./app /app
 
 EXPOSE 8501
 
-CMD ["streamlit", "run", "app/main.py", "--server.address=0.0.0.0"]
+CMD ["streamlit", "run", "main.py", "--server.address=0.0.0.0"]
